# metal-price-etl-airflow-gcp

./: .env  .gitignore  README.md  airflow.cfg  docker-compose.yaml  pyproject.toml
dags/: dag_metal_cloud.py
src/: create_dw.py  dim_currency.json  extract_load_gcs.py  load_data.py  transform_data.py  validate_data.py
